--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "miloconcept",
   "version": "1.0.0",
   "description": "Milo Concept Store",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node app.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
@@ -18,9 +18,6 @@
     "nodemailer": "^7.0.11",
     "pdfkit": "^0.17.2",
     "sqlite3": "^5.1.7"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   },
   "author": "",
   "license": "ISC"
